styles/style.css
/* --- ШАПКА --- */
.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  padding: 92px 50px;
}

.header__links-list {
  display: flex;
  gap: 32px;
  list-style: circle;
}

.header__links-list-item_no-bullit {
  list-style: none;
}

.header__link_active {
  border-bottom: 1px solid currentColor;
}

.header__logo {
  display: block;
  width: 148px;
}

.header__address {
  font-style: normal;
  line-height: 1.5;
  max-width: 240px;
  justify-self: end;
}

/* --- ОБЛОЖКА --- */
.cover {
  position: relative;
  background-image: url("../images/cover.jpg");
  background-size: cover;
  background-position: center;
  padding: 165px 50px 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 757px;
}

.overlay {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 0;
}

.cover__title {
  position: relative;
  z-index: 1;
  color: #fff;
  font-size: 100px;
  font-weight: 700;
  line-height: 1.15;
  text-transform: uppercase;
  letter-spacing: 0.3em;
}

.aligned-text {
  display: block;
  text-align: left;
}

.aligned-text_center {
  display: block;
  text-align: center;
}

.aligned-text_right {
  display: block;
  text-align: right;
  margin-right: -0.3em; /* Компенсация отступа после последней буквы */
}

.cover__description {
  position: relative;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 78px;
}

.cover__description-text {
  color: #fff;
  text-transform: uppercase;
  word-spacing: 18px;
  font-size: 22px;
}

.bet-button {
  background: transparent;
  border: 1px solid #fff;
  color: #fff;
  padding: 12px 32px;
  font-size: 22px;
  text-transform: uppercase;
  cursor: pointer;
  font-family: inherit;
}

/* --- ЛОТЫ --- */
.lots {
  padding: 179px 50px;
}

.lots__heading {
  font-size: 40px;
  margin-bottom: 27px;
  font-weight: 700;
  text-transform: uppercase;
}

.lots__card-list {
  display: flex;
  flex-wrap: wrap;
  gap: 25px;
}

.lots__card-list-item {
  width: calc((100% - 50px) / 3);
  min-height: 450px;
}

.card {
  position: relative;
  height: 100%;
  padding: 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-size: cover;
  background-position: center;
}

.card_type_film {
  background-image: url("../images/card-lot-01.jpg");
}

.card_type_book {
  background-image: url("../images/card-lot-02.jpg");
}

.card_type_picture {
  background-image: url("../images/card-lot-03.jpg");
}

.card__title {
  position: relative;
  z-index: 1;
  color: #fff;
  text-decoration: underline;
  font-size: 22px;
  font-weight: 700;
  text-transform: uppercase;
}

.card__text {
  position: relative;
  z-index: 1;
  color: #fff;
  font-size: 20px;
  line-height: 1.2;
}

/* --- ОБ АУКЦИОНЕ (КОЛОНКИ ПО СЕТКЕ) --- */
.about {
  display: grid;
  /* Ширина левой колонки такая же, как у лота */
  grid-template-columns: calc((100% - 50px) / 3) 1fr;
  gap: 25px;
  padding: 0 50px 180px;
}

.about__logo {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 240px;
  height: 240px;
  background-color: #000;
  border-radius: 50%;
  margin: 0 auto;
}

.about__logo-image {
  width: 148px;
}

.about__title {
  margin: 100px 0 27px;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
}

.about__text {
  font-size: 20px;
  line-height: 1.2;
}

.about__text p:first-child {
  margin-bottom: 24px;
}

/* --- ПОДВАЛ --- */
.footer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: start;
  padding: 100px 50px;
}

.footer__menu-list {
  text-align: center;
}

.footer__social-list {
  display: flex;
  justify-content: flex-end;
  gap: 16px;
}

.footer__social-icon {
  width: 48px;
  height: 48px;
}

